# whimsky

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  release.yml  tests.yml
.sqlx/: query-7963f043e5c9d1e3b29dfcfb7893fbf8e2631c62a033b084735e735abb39ec7d.json  query-7ed838d7e6610e39cdcf65b5aba52fca4ca37cabc5f7d55d5815129390c5ce2e.json  query-87680333d90c4e91b1f0a9db0b1286eb9fa4506c0cfc467cd4f78af30c056cc5.json  query-928d1977a219ed575b719dd8cadce52e54402872f98bd39f278c8e0e81b4c439.json  query-e288a46374826aea25db508051660c5c79615ff243a9a8825d56d00e5298f3bf.json
migrations/: 20241110021640_init.sql
src/: bsky.rs  database.rs  fetcher.rs  main.rs  rss.rs
src/commands/: mod.rs  start.rs
src/commands/database/: export_posts.rs  insert_posts.rs  mod.rs  remove_posts.rs
