[package]
name = "whimsky"
authors = ["Blooym"]
repository = "https://github.com/Blooym/whimsky"
description = "Automatic posting Infinity Nikki news to Bluesky."
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
reqwest = { version = "0.12.9", features = ["json"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
anyhow = "1.0.94"
clap = { version = "4.5.22", features = ["derive", "env", "string"] }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = "0.4.38"
bsky-sdk = "0.1.13"
dirs = "5.0.1"
serde = { version = "1.0.215", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
tracing = "0.1.41"
image = "0.25.5"

[profile.release]
lto = true
codegen-units = 1
