[package]
name = "whimsky"
authors = ["Blooym"]
repository = "https://github.com/Blooym/whimsky"
description = "Automatic posting Infinity Nikki news to Bluesky."
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
reqwest = { version = "0.12.15", features = ["json"] }
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio"] }
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "env", "string"] }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = "0.4.40"
bsky-sdk = "0.1.19"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
tracing = "0.1.41"
image = "0.25.6"

[profile.release]
lto = true
codegen-units = 1
